added all basic html elements

--- a/02-WebFundamentals/project/index.html
+++ b/02-WebFundamentals/project/index.html
@@ -12,15 +12,52 @@
       <a href="#" class="logo">DADA</a>
       <a href="#" class="button">Login</a>
     </nav>
-
-
-
-
-
+    <header>
+      <div>
+        <h1>A parenting coach in your pocket</h1>
+        <img src="./images/device mockup 1.svg" alt="Device Mockup" />
+        <h2>Most parenting resources are built with moms in mind</h2>
+        <h3>We've created one for you, Dad!</h3>
+        <h4>
+          We want to empower fathers to parent with confidence and enjoy more
+          quality time with their kids.
+        </h4>
+      </div>
+      <div>
+        <nav>
+          <a href="#" class="bluebutton">Get Dadvice</a>
+        </nav>
+        <h2>Here you will find</h2>
+      </div>
+    </header>
+    <div>
+      <h3>Low effort activity ideas to suit your mood and budget</h3>
+      <img src="./images/penguin1.svg" alt="Penguin with lightbulb" />
+    </div>
+    <div>
+      <h3>Fast and clear answers to most common parenting challenges</h3>
+      <img src="./images/penguin2.svg" alt="Frustrated penguin" />
+    </div>
+    <div>
+      <h3>
+        Cliff-notes from top rated parenting books (because who has the time to
+        read the whole thing?)
+      </h3>
+      <img src="./images/penguin3.svg" alt="Penguin reading a book" />
+    </div>
+    <div>
+      <h3>Longer reads for the SuperDads out there</h3>
+      <img src="./images/penguin4.svg" alt="Weightlifter penguin" />
+    </div>
     <nav>
-        <a href="#" class="footlink">Contact Us</a>
-        <a href="#" class="footlink">Privacy</a>
-        <a href="#" class="footlink">Terms</a>
+      <a href="#" class="bluebutton">Sign Up</a>
     </nav>
   </body>
+  <footer>
+    <nav>
+      <a href="#" class="footlink">Contact Us</a>
+      <a href="#" class="footlink">Privacy</a>
+      <a href="#" class="footlink">Terms</a>
+    </nav>
+  </footer>
 </html>
