--- a/02-WebFundamentals/project/index.html
+++ b/02-WebFundamentals/project/index.html
@@ -31,22 +31,30 @@
       </div>
     </header>
     <div>
-      <h3>Low effort activity ideas to suit your mood and budget</h3>
+      <h3>
+        <span class="bold">Low effort activity ideas</span> to suit your mood
+        and budget
+      </h3>
       <img src="./images/penguin1.svg" alt="Penguin with lightbulb" />
     </div>
     <div>
-      <h3>Fast and clear answers to most common parenting challenges</h3>
+      <h3>
+        <span class="bold">Fast and clear answers</span> to most common
+        parenting challenges
+      </h3>
       <img src="./images/penguin2.svg" alt="Frustrated penguin" />
     </div>
     <div>
       <h3>
-        Cliff-notes from top rated parenting books (because who has the time to
-        read the whole thing?)
+        <span class="bold">Cliff-notes</span> from top rated parenting books
+        <span class="italics"
+          >(because who has the time to read the whole thing?)</span
+        >
       </h3>
       <img src="./images/penguin3.svg" alt="Penguin reading a book" />
     </div>
     <div>
-      <h3>Longer reads for the SuperDads out there</h3>
+      <h3><span class="bold">Longer reads</span> for the SuperDads out there</h3>
       <img src="./images/penguin4.svg" alt="Weightlifter penguin" />
     </div>
     <nav>
