added flex content and added some footer and body content stylings

--- a/02-WebFundamentals/project/index.html
+++ b/02-WebFundamentals/project/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <nav>
+    <nav class="top">
       <a href="#" class="logo">DADA</a>
       <a href="#" class="button">Login</a>
     </nav>
@@ -22,29 +22,28 @@
           We want to empower fathers to parent with confidence and enjoy more
           quality time with their kids.
         </h4>
-      </div>
-      <div>
         <nav>
           <a href="#" class="bluebutton">Get Dadvice</a>
         </nav>
-        <h2>Here you will find</h2>
+        <h2>Here you will find:</h2>
       </div>
     </header>
-    <div>
+    <div id="peng1">
       <h3>
         <span class="bold">Low effort activity ideas</span> to suit your mood
         and budget
       </h3>
       <img src="./images/penguin1.svg" alt="Penguin with lightbulb" />
     </div>
-    <div>
+    <content>
+    <div id="peng2">
       <h3>
         <span class="bold">Fast and clear answers</span> to most common
         parenting challenges
       </h3>
       <img src="./images/penguin2.svg" alt="Frustrated penguin" />
     </div>
-    <div>
+    <div id="peng3">
       <h3>
         <span class="bold">Cliff-notes</span> from top rated parenting books
         <span class="italics"
@@ -53,19 +52,24 @@
       </h3>
       <img src="./images/penguin3.svg" alt="Penguin reading a book" />
     </div>
-    <div>
-      <h3><span class="bold">Longer reads</span> for the SuperDads out there</h3>
+    <div id="peng4">
+      <h3>
+        <span class="bold">Longer reads</span> for the SuperDads out there
+      </h3>
       <img src="./images/penguin4.svg" alt="Weightlifter penguin" />
     </div>
     <nav>
       <a href="#" class="bluebutton">Sign Up</a>
     </nav>
+</content>
+    <footer>
+        <div>
+          <nav>
+            <a href="#" class="footlink">Contact Us</a>
+            <a href="#" class="footlink">Privacy</a>
+            <a href="#" class="footlink">Terms</a>
+          </nav>
+        </div>
+      </footer>
   </body>
-  <footer>
-    <nav>
-      <a href="#" class="footlink">Contact Us</a>
-      <a href="#" class="footlink">Privacy</a>
-      <a href="#" class="footlink">Terms</a>
-    </nav>
-  </footer>
 </html>
