styled footer, corrected font weightings and sizes

--- a/02-WebFundamentals/project/index.html
+++ b/02-WebFundamentals/project/index.html
@@ -23,53 +23,53 @@
           quality time with their kids.
         </h4>
         <nav>
-          <a href="#" class="bluebutton">Get Dadvice</a>
+          <a href="#" class="bluebutton" id="blue1">Get Dadvice</a>
         </nav>
         <h2>Here you will find:</h2>
       </div>
     </header>
-    <div id="peng1">
-      <h3>
-        <span class="bold">Low effort activity ideas</span> to suit your mood
-        and budget
-      </h3>
-      <img src="./images/penguin1.svg" alt="Penguin with lightbulb" />
-    </div>
     <content>
-    <div id="peng2">
-      <h3>
-        <span class="bold">Fast and clear answers</span> to most common
-        parenting challenges
-      </h3>
-      <img src="./images/penguin2.svg" alt="Frustrated penguin" />
-    </div>
-    <div id="peng3">
-      <h3>
-        <span class="bold">Cliff-notes</span> from top rated parenting books
-        <span class="italics"
-          >(because who has the time to read the whole thing?)</span
-        >
-      </h3>
-      <img src="./images/penguin3.svg" alt="Penguin reading a book" />
-    </div>
-    <div id="peng4">
-      <h3>
-        <span class="bold">Longer reads</span> for the SuperDads out there
-      </h3>
-      <img src="./images/penguin4.svg" alt="Weightlifter penguin" />
-    </div>
-    <nav>
-      <a href="#" class="bluebutton">Sign Up</a>
-    </nav>
-</content>
+      <div id="peng1">
+        <h3>
+          <span class="bold">Low effort activity ideas</span> to suit your mood
+          and budget
+        </h3>
+        <img src="./images/penguin1.svg" alt="Penguin with lightbulb" />
+      </div>
+      <div id="peng2">
+        <img src="./images/penguin2.svg" alt="Frustrated penguin" />
+        <h3>
+          <span class="bold">Fast and clear answers</span> to most common
+          parenting challenges
+        </h3>
+      </div>
+      <div id="peng3">
+        <h3>
+          <span class="bold">Cliff-notes</span> from top rated parenting books
+          <span class="italics"
+            >(because who has the time to read the whole thing?)</span
+          >
+        </h3>
+        <img src="./images/penguin3.svg" alt="Penguin reading a book" />
+      </div>
+      <div id="peng4">
+        <img src="./images/penguin4.svg" alt="Weightlifter penguin" />
+        <h3>
+          <span class="bold">Longer reads</span> for the SuperDads out there
+        </h3>
+      </div>
+      <nav>
+        <a href="#" class="bluebutton">Sign Up</a>
+      </nav>
+    </content>
     <footer>
-        <div>
-          <nav>
-            <a href="#" class="footlink">Contact Us</a>
-            <a href="#" class="footlink">Privacy</a>
-            <a href="#" class="footlink">Terms</a>
-          </nav>
-        </div>
-      </footer>
+      <div>
+        <nav>
+          <a href="#" class="footlink">Contact Us</a>
+          <a href="#" class="footlink">Privacy</a>
+          <a href="#" class="footlink">Terms</a>
+        </nav>
+      </div>
+    </footer>
   </body>
 </html>
